--- a/joylashuv - Copy.html
+++ b/joylashuv - Copy.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="uz">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frenzy Fast Food - Joylashuv</title>
+    <title>Frenzy Fast Food - Location</title>
     <link rel="icon" href="image.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
@@ -219,6 +219,7 @@
         }
 
         /* Xaritalar uchun yangi grid uslubi */
+        /* New grid style for maps */
         .maps-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -331,59 +332,59 @@
             <img src="img/image.png" alt="Frenzy Fast Food Logo" class="logo">
             
             <ul class="nav-menu" id="navMenu">
-                <li class="nav-item"><a href="index.html" class="nav-link">Asosiy</a></li>
-                <li class="nav-item"><a href="reklama.html" class="nav-link">Reklama</a></li>
-                <li class="nav-item"><a href="malumot.html" class="nav-link">Ma'lumot</a></li>
-                <li class="nav-item"><a href="boglanish.html" class="nav-link">Bog'lanish</a></li>
-                <li class="nav-item"><a href="https://maps.app.goo.gl/qzjcgZmJ7Mni9zu66" class="nav-link">Joylashuv</a></li>
+                <li class="nav-item"><a href="index - Copy.html" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="reklama - Copy.html" class="nav-link">Promotions</a></li>
+                <li class="nav-item"><a href="malumot - Copy.html" class="nav-link">Information</a></li>
+                <li class="nav-item"><a href="boglanish - Copy.html" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="https://maps.app.goo.gl/qzjcgZmJ7Mni9zu66" class="nav-link">Location</a></li>
             </ul>
         </nav>
     </header>
 
     <div class="main-content">
-        <h1 class="page-title">Bizning Joylashuvimiz</h1>
-        <p class="page-subtitle">Bizni quyidagi manzillarda topishingiz mumkin</p>
+        <h1 class="page-title">Our Location</h1>
+        <p class="page-subtitle">You can find us at the following addresses</p>
 
 
             <div class="location-card">
-                <h3><i class="fa-solid fa-location-dot"></i> Guliston Filiali</h3>
+                <h3><i class="fa-solid fa-location-dot"></i> Gulistan Branch</h3>
                 <div class="info-item">
                     <span class="icon"><i class="fa-solid fa-building"></i></span>
                     <div>
-                        <strong>Manzil:</strong><br>
-                        Toshkent viloyati, Guliston
+                        <strong>Address:</strong><br>
+                        Tashkent region, Gulistan
                     </div>
                 </div>
                 <div class="info-item">
                     <span class="icon"><i class="fa-solid fa-clock"></i></span>
                     <div>
-                        <strong>Ish vaqti:</strong><br>
-                        Har kuni: 10:00 – 23:00
+                        <strong>Working Hours:</strong><br>
+                        Every day: 10:00 – 23:00
                     </div>
                 </div>
                 <div class="info-item">
                     <span class="icon"><i class="fa-solid fa-phone"></i></span>
                     <div>
-                        <strong>Telefon:</strong><br>
+                        <strong>Phone:</strong><br>
                         <a href="tel:+998902550099">+998 90 255 00 99</a>
                     </div>
                 </div>
                  <div class="info-item">
                     <span class="icon"><i class="fa-solid fa-truck"></i></span>
                     <div>
-                        <strong>Yetkazib berish:</strong><br>
-                        Aniqlanmoqda
+                        <strong>Delivery:</strong><br>
+                        Being determined
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="map-section">
-            <h2>Bizning Filiallarimiz Xaritada</h2>
+            <h2>Our Branches on the Map</h2>
             <div class="maps-grid">
 
                 <div class="map-container">
-                    <h3>Guliston Filiali</h3>
+                    <h3>Gulistan Branch</h3>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3034.264876576292!2d68.77849627583122!3d40.491525471427735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38b207013cabcce1%3A0x2b710779a3605835!2z0JvQsNCy0LDRiCDRhtC10L3RgtGAINCz0YPQu9C40YHRgtCw0L0!5e0!3m2!1sru!2s!4v1760459198626!5m2!1sru!2s" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 
@@ -392,7 +393,7 @@
     </div>
 
     <footer>
-        <p>© 2025 Frenzy Fast Food. Barcha huquqlar himoyalangan.</p>
+        <p>© 2025 Frenzy Fast Food. All rights reserved.</p>
     </footer>
 
     <script>
