--- a/reklama - Copy.html
+++ b/reklama - Copy.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="uz">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frenzy Fast Food - Reklama</title>
+    <title>Frenzy Fast Food - Promotions</title>
     <link rel="icon" href="image.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
     <style>
@@ -558,93 +558,93 @@
             <button class="mobile-menu-btn" onclick="toggleMenu()">☰</button>
             <div class="logo-text"><img style="height: 80px; width: 80px;" src="img/image.png" alt=""></div>
             <ul class="nav-menu" id="navMenu">
-                <li><a href="index.html" class="nav-link">Asosiy</a></li>
-                <li><a href="#reklama" class="nav-link">Reklama</a></li>
-                <li><a href="malumot.html" class="nav-link">Ma'lumot</a></li>
-                <li><a href="boglanish.html" class="nav-link">Bog'lanish</a></li>
-                <li><a href="joylashuv.html" class="nav-link">Joylashuv</a></li>
+                <li><a href="index - Copy.html" class="nav-link">Home</a></li>
+                <li><a href="#reklama" class="nav-link">Promotions</a></li>
+                <li><a href="malumot - Copy.html" class="nav-link">Information</a></li>
+                <li><a href="boglanish - Copy.html" class="nav-link">Contact</a></li>
+                <li><a href="joylashuv - Copy.html" class="nav-link">Location</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="hero">
-        <h1>🎬 Bizning Reklamalar 🎬</h1>
-        <p>Frenzy Fast Food ning eng zo'r va ajoyib reklama videolarini tomosha qiling!</p>
+        <h1>🎬 Our Promotions 🎬</h1>
+        <p>Watch the best and most amazing promotional videos from Frenzy Fast Food!</p>
         <div class="emoji-line">🍔 🍕 🌮 🍟 🥤</div>
     </section>
 
     <section style="max-width: 450px;" class="featured-video">
-        <h2 class="section-title">⭐ Asosiy Reklama Video ⭐</h2>
+        <h2 class="section-title">⭐ Featured Promotion Video ⭐</h2>
         <div class="featured-card">
              <img src="img/image.png" alt="Featured Video Image">
             <div class="featured-info">
-                <h2>🔥 Frenzy Fast Food - Ta'mi Ajoyib! 🔥</h2>
-                <p>Bizning eng zo'r reklama videomizda siz eng mazali taomlarimiz va mukammal xizmatimiz bilan tanishasiz. Har bir loqma - bu yangi tajriba va unutilmas ta'm! Tez xizmat, sifatli mahsulot va do'stona atmosfera - hammasi sizning uchun!</p>
+                <h2>🔥 Frenzy Fast Food - Amazing Taste! 🔥</h2>
+                <p>In our best promotion video, you will get acquainted with our most delicious meals and perfect service. Every bite is a new experience and an unforgettable taste! Fast service, quality product, and friendly atmosphere - all for you!</p>
             </div>
         </div>
     </section>
 
     <section id="reklama" class="video-section">
-        <h2 class="section-title">🎥 Barcha Reklama Videolar 🎥</h2>
+        <h2 class="section-title">🎥 All Promotion Videos 🎥</h2>
         <div class="video-grid">
             
             <div class="video-card">
                 <div class="video-wrapper">
-                    <a style="margin-top: 100px;" href="https://www.instagram.com/reel/DOOLqTBiDuP/?igsh=MWF4cm8yYjJpMThmNw==" target="_blank">Reel'ni ko'rish ↗️</a>
+                    <a style="margin-top: 100px;" href="https://www.instagram.com/reel/DOOLqTBiDuP/?igsh=MWF4cm8yYjJpMThmNw==" target="_blank">View Reel ↗️</a>
                 </div>
                 <div class="video-info">
-                    <h3>🍔 Burger va Fries! (Instagram Reel)</h3>
-                    <p>Bizning eng mashhur va lazzatli burgerlarimiz! Har bir burger - bu noyob ta'm, yumshoq go'sht va yangi ingredientlar!</p>
+                    <h3>🍔 Burger and Fries! (Instagram Reel)</h3>
+                    <p>Our most popular and delicious burgers! Every burger is a unique taste, tender meat, and fresh ingredients!</p>
                 </div>
             </div>
 
             <div class="video-card">
                 <div class="video-wrapper">
-                    <a style="margin-top: 100px;" href="https://www.instagram.com/reel/DMnFoA4sqLe/?igsh=dHJ6MjMyNmVtNHhx" target="_blank">Reel'ni ko'rish ↗️</a>
+                    <a style="margin-top: 100px;" href="https://www.instagram.com/reel/DMnFoA4sqLe/?igsh=dHJ6MjMyNmVtNHhx" target="_blank">View Reel ↗️</a>
                 </div>
                 <div class="video-info">
-                    <h3>🍕 Maxsus Pizza Retsepti (Instagram Reel)</h3>
-                    <p>Issiq, mazali va sifatli pizzalarimiz! Turli xil to'ldirish, mozzarella pishloq va ajoyib sous bilan!</p>
+                    <h3>🍕 Special Pizza Recipe (Instagram Reel)</h3>
+                    <p>Hot, delicious, and high-quality pizzas! With various toppings, mozzarella cheese, and amazing sauce!</p>
                 </div>
             </div>
 
             <div class="video-card">
                 <div class="video-wrapper">
-                    <a style="margin-top: 100px;" href="https://www.instagram.com/reel/DKzTiYTMAGo/?igsh=aTgwNmphMHVlejB5" target="_blank">Reel'ni ko'rish ↗️</a>
+                    <a style="margin-top: 100px;" href="https://www.instagram.com/reel/DKzTiYTMAGo/?igsh=aTgwNmphMHVlejB5" target="_blank">View Reel ↗️</a>
                 </div>
                 <div class="video-info">
-                    <h3>⚡ Chegirmalar va Aksiyalar (Instagram Reel)</h3>
-                    <p>Chegirmalar, aksiyalar va maxsus takliflar! Frenzy Fast Food dan har kuni yangi imkoniyatlar!</p>
+                    <h3>⚡ Discounts and Promotions (Instagram Reel)</h3>
+                    <p>Discounts, promotions, and special offers! New opportunities every day from Frenzy Fast Food!</p>
                 </div>
             </div>
 
             <div class="video-card">
                 <div class="video-wrapper">
-                    <a style="margin-top: 100px;" href="https://www.instagram.com/reel/DGxoPdTNHEW/?igsh=eTE4b2Eyb3VsaXBr" target="_blank">Reel'ni ko'rish ↗️</a>
+                    <a style="margin-top: 100px;" href="https://www.instagram.com/reel/DGxoPdTNHEW/?igsh=eTE4b2Eyb3VsaXBr" target="_blank">View Reel ↗️</a>
                 </div>
                 <div class="video-info">
-                    <h3>🥤 Yozgi Ichimliklar (Instagram Reel)</h3>
-                    <p>Sovuq ichimliklar, milkshake va shirin desertlar! Har bir ovqatni mukammal tugallang!</p>
+                    <h3>🥤 Summer Drinks (Instagram Reel)</h3>
+                    <p>Cold drinks, milkshakes, and sweet desserts! Perfectly finish every meal!</p>
                 </div>
             </div>
 
             <div class="video-card">
                 <div class="video-wrapper">
-                    <a style="margin-top: 100px;" href="https://www.instagram.com/reel/DFh_iomsVYM/?igsh=MTF1MTgybzFsOXkzdw==" target="_blank">Reel'ni ko'rish ↗️</a>
+                    <a style="margin-top: 100px;" href="https://www.instagram.com/reel/DFh_iomsVYM/?igsh=MTF1MTgybzFsOXkzdw==" target="_blank">View Reel ↗️</a>
                 </div>
                 <div class="video-info">
-                    <h3>👨‍👩‍👧‍👦 Frenzy'da Oilaviy Kunningiz (Instagram Reel)</h3>
-                    <p>Bizning do'stona jamoamiz va baxtli mijozlarimiz! Siz ham Frenzy oilasining bir qismi bo'ling!</p>
+                    <h3>👨‍👩‍👧‍👦 Your Family Day at Frenzy (Instagram Reel)</h3>
+                    <p>Our friendly team and happy customers! You too can be a part of the Frenzy family!</p>
                 </div>
             </div>
 
             <div class="video-card">
                 <div class="video-wrapper">
-                    <a style="margin-top: 100px;" href="https://www.instagram.com/reel/DF7vcthMKPe/?igsh=MWg1Nno2d2QzM2p3Mw==" target="_blank">Reel'ni ko'rish ↗️</a>
+                    <a style="margin-top: 100px;" href="https://www.instagram.com/reel/DF7vcthMKPe/?igsh=MWg1Nno2d2QzM2p3Mw==" target="_blank">View Reel ↗️</a>
                 </div>
                 <div class="video-info">
-                    <h3>🆕 Yangi Menyu Tanishtiruvi (Instagram Reel)</h3>
-                    <p>Har haftada yangi va hayajonli taomlar! Frenzy Fast Food har doim innovatsion va mazali!</p>
+                    <h3>🆕 New Menu Introduction (Instagram Reel)</h3>
+                    <p>New and exciting dishes every week! Frenzy Fast Food is always innovative and delicious!</p>
                 </div>
             </div>
             
@@ -652,15 +652,15 @@
     </section>
 
     <section class="cta-section">
-        <h2>🎉 Bizga Bugun Tashrif Buyuring! 🎉</h2>
-        <p>Tez, mazali va sifatli taomlar uchun eng yaxshi joy!</p>
-        <a href="index.html" class="btn">Menyuni Ko'ring 🍔</a>
+        <h2>🎉 Visit Us Today! 🎉</h2>
+        <p>The best place for fast, delicious, and quality meals!</p>
+        <a href="index.html" class="btn">View Menu 🍔</a>
     </section>
 
     <footer>
-        <p>🍔 &copy; 2025 Frenzy Fast Food. Barcha huquqlar himoyalangan. 🍔</p>
+        <p>🍔 &copy; 2025 Frenzy Fast Food. All rights reserved. 🍔</p>
         <div class="footer-emoji">⭐⭐⭐⭐⭐</div>
-        <p style="margin-top: 15px; font-size: 0.95rem; opacity: 0.8;">Tez xizmat | Mazali taomlar | Sifatli mahsulot</p>
+        <p style="margin-top: 15px; font-size: 0.95rem; opacity: 0.8;">Fast service | Delicious food | Quality product</p>
     </footer>
 
     <script>
