--- a/index - Copy.html
+++ b/index - Copy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lavash Center | Premium Taste Hub</title>
+     <link rel="icon" href="img/image.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
@@ -1338,7 +1339,7 @@ footer {
                     <a style="margin-top: 10px; color: #1A1A1A;" href="joylashuv - Copy.html" class="nav-link">OUR LOCATION</a>
                 </li>
             </ul>
-            <select style=" background-color: yellow; color: white; margin-left: 15px;" class="lang-select" onchange="goToSite(this.value); this.selectedIndex=0;">
+            <select style=" background-color:rgba(255, 107, 53, 0.95); color: white; margin-left: 15px;" class="lang-select" onchange="goToSite(this.value); this.selectedIndex=0;">
                 <option selected >Lang</option>
                 <option value="index.html">Uz</option>
             </select> 
