--- a/reklama.html
+++ b/reklama.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frenzy Fast Food - Reklama</title>
     <link rel="icon" href="image.png">
+      <link rel="icon" href="img/image.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
     <style>
         * {
